--- a/web/index.html
+++ b/web/index.html
@@ -10,25 +10,21 @@
     <h1>bnuuy</h1>
     <pre>
 https://bnuuy.stream/assets/big_buck_bunny/index.m3u8
+https://bnuuy.stream/encrypted/big_buck_bunny/index.m3u8
     </pre>
     <div>
-        <video id="video" controls width="800" heigh="450">
+        <video id="video" controls width="800" heigh="450" style="background-color: black;">
         </video>
         <script>
+            var video = document.getElementById('video');
+            const bbb = '/encrypted/big_buck_bunny/index.m3u8';
             if (Hls.isSupported()) {
-                var video = document.getElementById('video');
                 var hls = new Hls();
-                hls.on(Hls.Events.MEDIA_ATTACHED, function () {
-                    console.log('video and hls.js are now bound together !');
-                });
-                hls.on(Hls.Events.MANIFEST_PARSED, function (event, data) {
-                    console.log(
-                        'manifest loaded, found ' + data.levels.length + ' quality level'
-                    );
-                });
-
-                hls.loadSource('/assets/big_buck_bunny/index.m3u8');
+                
+                hls.loadSource(bbb);
                 hls.attachMedia(video);
+            } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
+                video.src = bbb;
             }
         </script>
     </div>
