Limit stats to 7 days, added subdomain

--- a/web/index.html
+++ b/web/index.html
@@ -29,10 +29,10 @@ https://bnuuy.stream/encrypted/big_buck_bunny/index.m3u8
         </script>
     </div>
     <p>
-        <a href="https://bnuuy-dashboard.chris-baltzer.workers.dev">stats</a>
+        <a href="https://github.com/cbaltzer/bnuuy">github</a>
     </p>
     <p>
-        <a href="https://github.com/cbaltzer/bnuuy">source</a>
+        <a href="https://stats.bnuuy.stream">stats</a>
     </p>
 </body>
 
