full url for video

--- a/web/index.html
+++ b/web/index.html
@@ -13,11 +13,11 @@ https://bnuuy.stream/assets/big_buck_bunny/index.m3u8
 https://bnuuy.stream/encrypted/big_buck_bunny/index.m3u8
     </pre>
     <div>
-        <video id="video" controls width="800" heigh="450" style="background-color: black;">
+        <video id="video" controls width="800" heigh="540" style="background-color: black;">
         </video>
         <script>
             var video = document.getElementById('video');
-            const bbb = '/encrypted/big_buck_bunny/index.m3u8';
+            const bbb = 'https://bnuuy.stream/encrypted/big_buck_bunny/index.m3u8';
             if (Hls.isSupported()) {
                 var hls = new Hls();
                 
