--- a/web/index.html
+++ b/web/index.html
@@ -32,7 +32,7 @@ https://bnuuy.stream/encrypted/big_buck_bunny/index.m3u8
         <a href="https://github.com/cbaltzer/bnuuy">github</a>
     </p>
     <p>
-        <a href="https://bnuuy-dashboard.chris-baltzer.workers.dev">stats</a>
+        <a href="https://bnuuy-dashboard.chris-baltzer.workers.dev">usage stats</a>
     </p>
 </body>
 
