--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@ https://bnuuy.stream/assets/big_buck_bunny/index.m3u8
 https://bnuuy.stream/encrypted/big_buck_bunny/index.m3u8
     </pre>
     <div>
-        <video id="video" controls width="800" heigh="540" style="background-color: black;">
+        <video id="video" controls width="800" heigh="450" style="aspect-ratio: 16 / 9; background-color: black;">
         </video>
         <script>
             var video = document.getElementById('video');
